# FlexSEA-Stack-SharedLib

./: .cproject  .gitmodules  CMakeLists.txt  FlexSEA_Shared_Library.pro  compile.bat  git-revision.sh  test.bat  test.c  update_revs.sh
inc/: flexsea_device_spec_defs.h  git_rev_data.h  revision.h
scripts/: prepLibFolder.py
src/: flexsea_config.c  trapez.c
